--- a/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
+++ b/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
@@ -5,3 +5,869 @@
   year={2015},
   url={https://arxiv.org/pdf/1502.04623.pdf}
 }
+@inproceedings{langley00,
+ author    = {P. Langley},
+ title     = {Crafting Papers on Machine Learning},
+ year      = {2000},
+ pages     = {1207--1216},
+ editor    = {Pat Langley},
+ booktitle     = {Proceedings of the 17th International Conference
+              on Machine Learning (ICML 2000)},
+ address   = {Stanford, CA},
+ publisher = {Morgan Kaufmann}
+}
+@article{lu2025dpm,
+  title={Dpm-solver++: Fast solver for guided sampling of diffusion probabilistic models},
+  author={Lu, Cheng and Zhou, Yuhao and Bao, Fan and Chen, Jianfei and Li, Chongxuan and Zhu, Jun},
+  journal={Machine Intelligence Research},
+  pages={1--22},
+  year={2025},
+  publisher={Springer}
+}
+@article{song2020denoising,
+  title={Denoising diffusion implicit models},
+  author={Song, Jiaming and Meng, Chenlin and Ermon, Stefano},
+  journal={arXiv preprint arXiv:2010.02502},
+  year={2020}
+}
+@misc{comfyui_wiki_inpainting,
+  author = {{ComfyUI Wiki}},
+  title = {How to Inpaint an Image in ComfyUI},
+  year = {2025},
+  url = {https://comfyui-wiki.com/en/tutorial/basic/how-to-inpaint-an-image-in-comfyui},
+  note = {Accessed: 2025-07-18}
+}
+@misc{AnythingV5_2025,
+  author       = {Yuno779},
+  title        = {Anything V5},
+  year         = {2023},
+  url          = {https://civitai.com/models/9409?modelVersionId=30163}
+}
+@article{zhang2023towards,
+  title={Towards coherent image inpainting using denoising diffusion implicit models},
+  author={Zhang, Guanhua and Ji, Jiabao and Zhang, Yang and Yu, Mo and Jaakkola, Tommi S and Chang, Shiyu},
+  year={2023}
+}
+@misc{comfyui_2025,
+  author = {{Comfy Org}},
+  title = {ComfyUI: A Powerful and Modular Stable Diffusion GUI and Backend},
+  year = {2025},
+  howpublished = {\url{https://github.com/comfyanonymous/ComfyUI}},
+  note = {Documentation available at \url{https://docs.comfy.org}}
+}
+@misc{hidreami1_2025,
+  author = {{HiDream.ai}},
+  title = {HiDream-I1: A 17B Parameter Open-Source Image Generative Foundation Model},
+  year = {2025},
+  howpublished = {\url{https://huggingface.co/HiDream-ai/HiDream-I1-Full}},
+  note = {Additional details available at \url{https://github.com/HiDream-ai/HiDream-I1}}
+}
+
+
+@inproceedings{
+gao2025diffusion,
+title={Diffusion Models and Gaussian Flow Matching: Two Sides of the Same Coin},
+author={Ruiqi Gao and Emiel Hoogeboom and Jonathan Heek and Valentin De Bortoli and Kevin Patrick Murphy and Tim Salimans},
+booktitle={The Fourth Blogpost Track at ICLR 2025},
+year={2025},
+url={https://openreview.net/forum?id=C8Yyg9wy0s}
+}
+@article{Strang1968,
+  author = {Strang, Gilbert},
+  title = {On the construction and comparison of difference schemes},
+  journal = {SIAM Journal on Numerical Analysis},
+  volume = {5},
+  number = {3},
+  pages = {506--517},
+  year = {1968},
+  doi = {10.1137/0705041}
+}
+
+@misc{von-platen-etal-2022-diffusers,
+  author = {Patrick von Platen and Suraj Patil and Anton Lozhkov and Pedro Cuenca and Nathan Lambert and Kashif Rasul and Mishig Davaadorj and Dhruv Nair and Sayak Paul and William Berman and Yiyi Xu and Steven Liu and Thomas Wolf},
+  title = {Diffusers: State-of-the-art diffusion models},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/huggingface/diffusers}}
+}
+@misc{diffusers_repaint2,
+  author = {FBehrad},
+  title = {Issue \#1213: RePaint compatibility with fast samplers},
+  year = {2022},
+  howpublished = {\url{https://github.com/huggingface/diffusers/issues/1213}},
+  note = {Accessed: [Insert Date]}
+}
+@article{grechka2024gradpaint,
+  title={GradPaint: Gradient-guided inpainting with diffusion models},
+  author={Grechka, Asya and Couairon, Guillaume and Cord, Matthieu},
+  journal={Computer Vision and Image Understanding},
+  volume={240},
+  pages={103928},
+  year={2024},
+  publisher={Elsevier}
+}
+@article{park2024illustrious,
+  title={Illustrious: an Open Advanced Illustration Model},
+  author={Park, Sang Hyun and Koh, Jun Young and Lee, Junha and Song, Joy and Kim, Dongha and Moon, Hoyeon and Lee, Hyunju and Song, Min},
+  journal={arXiv preprint arXiv:2409.19946},
+  year={2024}
+}
+@inproceedings{corneanu2024latentpaint,
+  title={Latentpaint: Image inpainting in latent space with diffusion models},
+  author={Corneanu, Ciprian and Gadde, Raghudeep and Martinez, Aleix M},
+  booktitle={Proceedings of the IEEE/CVF Winter Conference on Applications of Computer Vision},
+  pages={4334--4343},
+  year={2024}
+}
+@TechReport{mitchell80,
+  author = 	 "T. M. Mitchell",
+  title = 	 "The Need for Biases in Learning Generalizations",
+  institution =  "Computer Science Department, Rutgers University",
+  year = 	 "1980",
+  address =	 "New Brunswick, MA",
+}
+
+@phdthesis{kearns89,
+  author = {M. J. Kearns},
+  title =  {Computational Complexity of Machine Learning},
+  school = {Department of Computer Science, Harvard University},
+  year =   {1989}
+}
+
+@Book{MachineLearningI,
+  editor = 	 "R. S. Michalski and J. G. Carbonell and T.
+		  M. Mitchell",
+  title = 	 "Machine Learning: An Artificial Intelligence
+		  Approach, Vol. I",
+  publisher = 	 "Tioga",
+  year = 	 "1983",
+  address =	 "Palo Alto, CA"
+}
+
+@Book{DudaHart2nd,
+  author =       "R. O. Duda and P. E. Hart and D. G. Stork",
+  title =        "Pattern Classification",
+  publisher =    "John Wiley and Sons",
+  edition =      "2nd",
+  year =         "2000"
+}
+
+@misc{anonymous,
+  title= {Suppressed for Anonymity},
+  author= {Author, N. N.},
+  year= {2021}
+}
+
+@InCollection{Newell81,
+  author =       "A. Newell and P. S. Rosenbloom",
+  title =        "Mechanisms of Skill Acquisition and the Law of
+                  Practice", 
+  booktitle =    "Cognitive Skills and Their Acquisition",
+  pages =        "1--51",
+  publisher =    "Lawrence Erlbaum Associates, Inc.",
+  year =         "1981",
+  editor =       "J. R. Anderson",
+  chapter =      "1",
+  address =      "Hillsdale, NJ"
+}
+
+
+@Article{Samuel59,
+  author = 	 "A. L. Samuel",
+  title = 	 "Some Studies in Machine Learning Using the Game of
+		  Checkers",
+  journal =	 "IBM Journal of Research and Development",
+  year =	 "1959",
+  volume =	 "3",
+  number =	 "3",
+  pages =	 "211--229"
+}
+
+@article{rout2023theoretical,
+  title={A theoretical justification for image inpainting using denoising diffusion probabilistic models},
+  author={Rout, Litu and Parulekar, Advait and Caramanis, Constantine and Shakkottai, Sanjay},
+  journal={arXiv preprint arXiv:2302.01217},
+  year={2023}
+}
+@inbook{Evans_Morriss_2008, place={Cambridge}, title={The microscopic connection}, booktitle={Statistical Mechanics of Nonequilibrium Liquids}, publisher={Cambridge University Press}, author={Evans, Denis J. and Morriss, Gary}, year={2008}, pages={33–78}} 
+@article{alrachid2018some,
+  title={Some remarks on preconditioning molecular dynamics},
+  author={AlRachid, Houssam and Mones, Letif and Ortner, Christoph},
+  journal={The SMAI Journal of computational mathematics},
+  volume={4},
+  pages={57--80},
+  year={2018}
+}
+@inproceedings{li2022hessian,
+  title={Hessian-free high-resolution nesterov acceleration for sampling},
+  author={Li, Ruilin and Zha, Hongyuan and Tao, Molei},
+  booktitle={International Conference on Machine Learning},
+  pages={13125--13162},
+  year={2022},
+  organization={PMLR}
+}
+@inproceedings{cheng2018underdamped,
+  title={Underdamped Langevin MCMC: A non-asymptotic analysis},
+  author={Cheng, Xiang and Chatterji, Niladri S and Bartlett, Peter L and Jordan, Michael I},
+  booktitle={Conference on learning theory},
+  pages={300--323},
+  year={2018},
+  organization={PMLR}
+}
+@misc{janati2024divideandconquerposteriorsamplingdenoising,
+      title={Divide-and-Conquer Posterior Sampling for Denoising Diffusion Priors}, 
+      author={Yazid Janati and Badr Moufad and Alain Durmus and Eric Moulines and Jimmy Olsson},
+      year={2024},
+      eprint={2403.11407},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2403.11407}, 
+}
+@inproceedings{lugmayr2022repaint,
+  title={Repaint: Inpainting using denoising diffusion probabilistic models},
+  author={Lugmayr, Andreas and Danelljan, Martin and Romero, Andres and Yu, Fisher and Timofte, Radu and Van Gool, Luc},
+  booktitle={Proceedings of the IEEE/CVF conference on computer vision and pattern recognition},
+  pages={11461--11471},
+  year={2022}
+}
+@article{duncan2017using,
+  title={Using perturbed underdamped Langevin dynamics to efficiently sample from probability distributions},
+  author={Duncan, Andrew B and N{\"u}sken, Nikolas and Pavliotis, Grigorios A},
+  journal={Journal of Statistical Physics},
+  volume={169},
+  pages={1098--1131},
+  year={2017},
+  publisher={Springer}
+}
+@article{mayet2024td,
+  title={TD-Paint: Faster Diffusion Inpainting Through Time Aware Pixel Conditioning},
+  author={Mayet, Tsiry and Shamsolmoali, Pourya and Bernard, Simon and Granger, Eric and H{\'e}rault, Romain and Chatelain, Clement},
+  journal={arXiv preprint arXiv:2410.09306},
+  year={2024}
+}
+@inproceedings{zhuang2024task,
+  title={A task is worth one word: Learning with task prompts for high-quality versatile image inpainting},
+  author={Zhuang, Junhao and Zeng, Yanhong and Liu, Wenran and Yuan, Chun and Chen, Kai},
+  booktitle={European Conference on Computer Vision},
+  pages={195--211},
+  year={2024},
+  organization={Springer}
+}
+@article{goodfellow2014generative,
+  title={Generative adversarial nets},
+  author={Goodfellow, Ian J and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
+  journal={Advances in neural information processing systems},
+  volume={27},
+  year={2014}
+}
+@article{ben2024d,
+  title={D-flow: Differentiating through flows for controlled generation},
+  author={Ben-Hamu, Heli and Puny, Omri and Gat, Itai and Karrer, Brian and Singer, Uriel and Lipman, Yaron},
+  journal={arXiv preprint arXiv:2402.14017},
+  year={2024}
+}
+@misc{podell2023sdxl,
+      title={SDXL: Improving Latent Diffusion Models for High-Resolution Image Synthesis}, 
+      author={Dustin Podell and Zion English and Kyle Lacey and Andreas Blattmann and Tim Dockhorn and Jonas Müller and Joe Penna and Robin Rombach},
+      year={2023},
+      eprint={2307.01952},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+@misc{saharia2022photorealistic,
+      title={Photorealistic Text-to-Image Diffusion Models with Deep Language Understanding}, 
+      author={Chitwan Saharia and William Chan and Saurabh Saxena and Lala Li and Jay Whang and Emily Denton and Seyed Kamyar Seyed Ghasemipour and Burcu Karagol Ayan and S. Sara Mahdavi and Rapha Gontijo Lopes and Tim Salimans and Jonathan Ho and David J Fleet and Mohammad Norouzi},
+      year={2022},
+      eprint={2205.11487},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+@inproceedings{cardoso2023monte,
+  title={Monte Carlo guided Denoising Diffusion models for Bayesian linear inverse problems.},
+  author={Cardoso, Gabriel and Le Corff, Sylvain and Moulines, Eric and others},
+  booktitle={The Twelfth International Conference on Learning Representations},
+  year={2023}
+}
+@article{kawar2022denoising,
+  title={Denoising diffusion restoration models},
+  author={Kawar, Bahjat and Elad, Michael and Ermon, Stefano and Song, Jiaming},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={23593--23606},
+  year={2022}
+}
+@article{chung2022diffusion,
+  title={Diffusion posterior sampling for general noisy inverse problems},
+  author={Chung, Hyungjin and Kim, Jeongsol and Mccann, Michael T and Klasky, Marc L and Ye, Jong Chul},
+  journal={arXiv preprint arXiv:2209.14687},
+  year={2022}
+}
+@article{trippe2022diffusion,
+  title={Diffusion probabilistic modeling of protein backbones in 3d for the motif-scaffolding problem},
+  author={Trippe, Brian L and Yim, Jason and Tischer, Doug and Baker, David and Broderick, Tamara and Barzilay, Regina and Jaakkola, Tommi},
+  journal={arXiv preprint arXiv:2206.04119},
+  year={2022}
+}
+@article{wu2024practical,
+  title={Practical and asymptotically exact conditional sampling in diffusion models},
+  author={Wu, Luhuan and Trippe, Brian and Naesseth, Christian and Blei, David and Cunningham, John P},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  year={2024}
+}
+@article{avrahami2023blended,
+  title={Blended latent diffusion},
+  author={Avrahami, Omri and Fried, Ohad and Lischinski, Dani},
+  journal={ACM transactions on graphics (TOG)},
+  volume={42},
+  number={4},
+  pages={1--11},
+  year={2023},
+  publisher={ACM New York, NY, USA}
+}
+@article{chung2022improving,
+  title={Improving diffusion models for inverse problems using manifold constraints},
+  author={Chung, Hyungjin and Sim, Byeongsu and Ryu, Dohoon and Ye, Jong Chul},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={25683--25696},
+  year={2022}
+}
+@misc{
+cornwall2024trainingfree,
+title={Training-free guidance of diffusion models for generalised inpainting},
+author={Lewis Cornwall and Joshua Meyers and James Day and Lilly S Wollman and Neil Dalchau and Aaron Sim},
+year={2024},
+url={https://openreview.net/forum?id=AC1QLOJK7l}
+}
+@misc{diffusers_repaint1,
+  author = {anton-l},
+  title = {[Community Pipeline] RePaint + Stable Diffusion},
+  url = {https://github.com/huggingface/diffusers/issues/1333},
+  year = 2022,
+  journal={GitHub repository},
+}
+@misc{stable_diffusion_webui,
+  author = {AUTOMATIC1111},
+  title = {Stable Diffusion WebUI},
+  url = {https://github.com/AUTOMATIC1111/stable-diffusion-webui},
+  year = 2023,
+  journal={GitHub repository},
+}
+@misc{CharacteristicGuidanceWebUI,
+  author = {Candi Zheng and Yuan Lan},
+  title = {Characteristic Guidance Web UI},
+  url = {https://github.com/scraed/CharacteristicGuidanceWebUI},
+  year = 2024,
+  journal={GitHub repository},
+}
+
+
+@misc{animagine_xl_3_0,
+  author = {CagliostroLab},
+  title = {Animagine XL 3.0},
+  url = {https://huggingface.co/cagliostrolab/animagine-xl-3.0},
+  year = 2023,
+}
+
+
+
+
+
+
+@incollection{Bengio+chapter2007,
+author = {Bengio, Yoshua and LeCun, Yann},
+booktitle = {Large Scale Kernel Machines},
+publisher = {MIT Press},
+title = {Scaling Learning Algorithms Towards {AI}},
+year = {2007}
+}
+@article{Luo2022UnderstandingDM,
+  title={Understanding Diffusion Models: A Unified Perspective},
+  author={Calvin Luo},
+  journal={ArXiv},
+  year={2022},
+  volume={abs/2208.11970},
+   
+}
+
+@article{Liu2022PseudoNM,
+  title={Pseudo Numerical Methods for Diffusion Models on Manifolds},
+  author={Luping Liu and Yi Ren and Zhijie Lin and Zhou Zhao},
+  journal={ArXiv},
+  year={2022},
+  volume={abs/2202.09778},
+   
+}
+
+@misc{mcmonkeyprojects2024sddynamic,
+  author = {Mcmonkeyprojects},
+  title = {SD-Dynamic-Thresholding: A Dynamic Thresholding Method For Stable Diffusion},
+  year = {2024},
+  journal = {GitHub repository},
+  url = {https://github.com/mcmonkeyprojects/sd-dynamic-thresholding}
+}
+
+
+@article{Karras2022ElucidatingTD,
+  title={Elucidating the Design Space of Diffusion-Based Generative Models},
+  author={Tero Karras and Miika Aittala and Timo Aila and Samuli Laine},
+  journal={ArXiv},
+  year={2022},
+  volume={abs/2206.00364},
+   
+}
+@article{Yu2023FreeDoMTE,
+  title={FreeDoM: Training-Free Energy-Guided Conditional Diffusion Model},
+  author={Jiwen Yu and Yinhuai Wang and Chen Zhao and Bernard Ghanem and Jian Zhang},
+  journal={ArXiv},
+  year={2023},
+  volume={abs/2303.09833},
+   
+}
+@article{Bansal2023UniversalGF,
+  title={Universal Guidance for Diffusion Models},
+  author={Arpit Bansal and Hong-Min Chu and Avi Schwarzschild and Soumyadip Sengupta and Micah Goldblum and Jonas Geiping and Tom Goldstein},
+  journal={2023 IEEE/CVF Conference on Computer Vision and Pattern Recognition Workshops (CVPRW)},
+  year={2023},
+  pages={843-852},
+   
+}
+@inproceedings{Kim2022RefiningGP,
+  title={Refining Generative Process with Discriminator Guidance in Score-based Diffusion Models},
+  author={Dongjun Kim and Yeongmin Kim and Wanmo Kang and Il-Chul Moon},
+  booktitle={International Conference on Machine Learning},
+  year={2022},
+   
+}
+@article{Hong2022ImprovingSQ,
+  title={Improving Sample Quality of Diffusion Models Using Self-Attention Guidance},
+  author={Susung Hong and Gyuseong Lee and Wooseok Jang and Seung Wook Kim},
+  journal={ArXiv},
+  year={2022},
+  volume={abs/2210.00939},
+   
+}
+@article{Saharia2022PhotorealisticTD,
+  title={Photorealistic Text-to-Image Diffusion Models with Deep Language Understanding},
+  author={Chitwan Saharia and William Chan and Saurabh Saxena and Lala Li and Jay Whang and Emily L. Denton and Seyed Kamyar Seyed Ghasemipour and Burcu Karagol Ayan and Seyedeh Sara Mahdavi and Raphael Gontijo Lopes and Tim Salimans and Jonathan Ho and David J. Fleet and Mohammad Norouzi},
+  journal={ArXiv},
+  year={2022},
+  volume={abs/2205.11487},
+   
+}
+@article{Rombach2021HighResolutionIS,
+  title={High-Resolution Image Synthesis with Latent Diffusion Models},
+  author={Robin Rombach and A. Blattmann and Dominik Lorenz and Patrick Esser and Bj{\"o}rn Ommer},
+  journal={2022 IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year={2021},
+  pages={10674-10685},
+   
+}
+@article{Hinton06,
+author = {Hinton, Geoffrey E. and Osindero, Simon and Teh, Yee Whye},
+journal = {Neural Computation},
+pages = {1527--1554},
+title = {A Fast Learning Algorithm for Deep Belief Nets},
+volume = {18},
+year = {2006}
+}
+@inproceedings{Song2019GenerativeMB,
+  title={Generative Modeling by Estimating Gradients of the Data Distribution},
+  author={Yang Song and Stefano Ermon},
+  booktitle={Neural Information Processing Systems},
+  year={2019},
+   
+}
+@book{goodfellow2016deep,
+title={Deep learning},
+author={Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron and Bengio, Yoshua},
+volume={1},
+year={2016},
+publisher={MIT Press}
+}
+
+@article{Ho2020DenoisingDP,
+  title={Denoising Diffusion Probabilistic Models},
+  author={Jonathan Ho and Ajay Jain and P. Abbeel},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2006.11239},
+   
+}
+
+@article{Uhlenbeck1930OnTT,
+  title={On the Theory of the Brownian Motion},
+  author={George E. Uhlenbeck and Leonard Salomon Ornstein},
+  journal={Physical Review},
+  year={1930},
+  volume={36},
+  pages={823-841},
+   
+}
+@article{Song2020ScoreBasedGM,
+  title={Score-Based Generative Modeling through Stochastic Differential Equations},
+  author={Yang Song and Jascha Narain Sohl-Dickstein and Diederik P. Kingma and Abhishek Kumar and Stefano Ermon and Ben Poole},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2011.13456},
+   
+}
+@article{Rozet2024LearningDP,
+  title={Learning Diffusion Priors from Observations by Expectation Maximization},
+  author={François Rozet and G'erome Andry and Franccois Lanusse and Gilles Louppe},
+  journal={ArXiv},
+  year={2024},
+  volume={abs/2405.13712},
+  url={https://api.semanticscholar.org/CorpusID:269982549}
+}
+@article{rozet2024learning,
+  title={Learning diffusion priors from observations by expectation maximization},
+  author={Rozet, Fran{\c{c}}ois and Andry, G{\'e}r{\^o}me and Lanusse, Fran{\c{c}}ois and Louppe, Gilles},
+  journal={Advances in Neural Information Processing Systems},
+  volume={37},
+  pages={87647--87682},
+  year={2024}
+}
+
+@misc{Denton2021ICLR,
+  author = {Denton, Emily},
+  title = {Ethical Considerations of Generative AI},
+  howpublished = {Invited Talk in Workshop: Synthetic Data Generation: Quality, Privacy, Bias, International Conference on Learning Representations (ICLR) 2021},
+  year = {2021},
+  url = {https://iclr.cc/virtual/2021/3714},
+  note = {Accessed: 2025-08-10}
+}
+@article{franks2018sex,
+  title={Sex, lies, and videotape: Deep fakes and free speech delusions},
+  author={Franks, Mary Anne and Waldman, Ari Ezra},
+  journal={Md. L. Rev.},
+  volume={78},
+  pages={892},
+  year={2018},
+  publisher={HeinOnline}
+}
+@article{Vincent2011ACB,
+  title={A Connection Between Score Matching and Denoising Autoencoders},
+  author={Pascal Vincent},
+  journal={Neural Computation},
+  year={2011},
+  volume={23},
+  pages={1661-1674},
+   
+}
+@article{Anderson1982ReversetimeDE,
+  title={Reverse-time diffusion equation models},
+  author={Brian. D. O. Anderson},
+  journal={Stochastic Processes and their Applications},
+  year={1982},
+  volume={12},
+  pages={313-326},
+   
+}
+
+@article{Ho2022ClassifierFreeDG,
+  title={Classifier-Free Diffusion Guidance},
+  author={Jonathan Ho},
+  journal={ArXiv},
+  year={2022},
+  volume={abs/2207.12598},
+   
+}
+@article{Walker2011AndersonAF,
+  title={Anderson Acceleration for Fixed-Point Iterations},
+  author={Homer F. Walker and Peng Ni},
+  journal={SIAM J. Numer. Anal.},
+  year={2011},
+  volume={49},
+  pages={1715-1735},
+   
+}
+@inbook{kardar_2007, place={Cambridge}, title={Statistical fields}, DOI={10.1017/CBO9780511815881.003}, booktitle={Statistical Physics of Fields}, publisher={Cambridge University Press}, author={Kardar, Mehran}, year={2007}, pages={19–34}}
+@article{Salimans2016ImprovedTF,
+  title={Improved Techniques for Training GANs},
+  author={Tim Salimans and Ian J. Goodfellow and Wojciech Zaremba and Vicki Cheung and Alec Radford and Xi Chen},
+  journal={ArXiv},
+  year={2016},
+  volume={abs/1606.03498},
+   
+}
+
+@inproceedings{xie2023smartbrush,
+  title={Smartbrush: Text and shape guided object inpainting with diffusion model},
+  author={Xie, Shaoan and Zhang, Zhifei and Lin, Zhe and Hinz, Tobias and Zhang, Kun},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={22428--22437},
+  year={2023}
+}
+
+
+@article{song2019generative,
+  title={Generative modeling by estimating gradients of the data distribution},
+  author={Song, Yang and Ermon, Stefano},
+  journal={Advances in neural information processing systems},
+  volume={32},
+  year={2019}
+}
+@inproceedings{wei2023elite,
+  title={Elite: Encoding visual concepts into textual embeddings for customized text-to-image generation},
+  author={Wei, Yuxiang and Zhang, Yabo and Ji, Zhilong and Bai, Jinfeng and Zhang, Lei and Zuo, Wangmeng},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={15943--15953},
+  year={2023}
+}
+@article{hu2021lora,
+  title={Lora: Low-rank adaptation of large language models},
+  author={Hu, Edward J and Shen, Yelong and Wallis, Phillip and Allen-Zhu, Zeyuan and Li, Yuanzhi and Wang, Shean and Wang, Lu and Chen, Weizhu},
+  journal={arXiv preprint arXiv:2106.09685},
+  year={2021}
+}
+@article{gal2022image,
+  title={An image is worth one word: Personalizing text-to-image generation using textual inversion},
+  author={Gal, Rinon and Alaluf, Yuval and Atzmon, Yuval and Patashnik, Or and Bermano, Amit H and Chechik, Gal and Cohen-Or, Daniel},
+  journal={arXiv preprint arXiv:2208.01618},
+  year={2022}
+}
+@article{zhou2023denoising,
+  title={Denoising diffusion bridge models},
+  author={Zhou, Linqi and Lou, Aaron and Khanna, Samar and Ermon, Stefano},
+  journal={arXiv preprint arXiv:2309.16948},
+  year={2023}
+}
+@article{liu2023222,
+  title={I2SB: Image-to-Image Schr$\backslash$" odinger Bridge},
+  author={Liu, Guan-Horng and Vahdat, Arash and Huang, De-An and Theodorou, Evangelos A and Nie, Weili and Anandkumar, Anima},
+  journal={arXiv preprint arXiv:2302.05872},
+  year={2023}
+}
+@article{liu2022let,
+  title={Let us build bridges: Understanding and extending diffusion generative models},
+  author={Liu, Xingchao and Wu, Lemeng and Ye, Mao and Liu, Qiang},
+  journal={arXiv preprint arXiv:2208.14699},
+  year={2022}
+}
+@article{lipman2022flow,
+  title={Flow matching for generative modeling},
+  author={Lipman, Yaron and Chen, Ricky TQ and Ben-Hamu, Heli and Nickel, Maximilian and Le, Matt},
+  journal={arXiv preprint arXiv:2210.02747},
+  year={2022}
+}
+@article{yang2023diffusion,
+  title={Diffusion models: A comprehensive survey of methods and applications},
+  author={Yang, Ling and Zhang, Zhilong and Song, Yang and Hong, Shenda and Xu, Runsheng and Zhao, Yue and Zhang, Wentao and Cui, Bin and Yang, Ming-Hsuan},
+  journal={ACM Computing Surveys},
+  volume={56},
+  number={4},
+  pages={1--39},
+  year={2023},
+  publisher={ACM New York, NY, USA}
+}
+@article{anderson1982reverse,
+  title={Reverse-time diffusion equation models},
+  author={Anderson, Brian DO},
+  journal={Stochastic Processes and their Applications},
+  volume={12},
+  number={3},
+  pages={313--326},
+  year={1982},
+  publisher={Elsevier}
+}
+@inproceedings{HeImagineYT,
+  title={Imagine yourself: Tuning-Free Personalized Image Generation},
+  author={Zecheng He and Bo Sun and Felix Juefei-Xu and Haoyu Ma and Ankit Ramchandani and Vincent Cheung and Siddharth Shah and Anmol Kalia and Ning Zhang and Peizhao Zhang and Roshan Sumbaly and Peter Vajda and Animesh Sinha and GenAI},
+  url={https://api.semanticscholar.org/CorpusID:271539938}
+}
+@article{wang2024instantid,
+  title={Instantid: Zero-shot identity-preserving generation in seconds},
+  author={Wang, Qixun and Bai, Xu and Wang, Haofan and Qin, Zekui and Chen, Anthony},
+  journal={arXiv preprint arXiv:2401.07519},
+  year={2024}
+}
+@article{ye2023ip,
+  title={Ip-adapter: Text compatible image prompt adapter for text-to-image diffusion models},
+  author={Ye, Hu and Zhang, Jun and Liu, Sibo and Han, Xiao and Yang, Wei},
+  journal={arXiv preprint arXiv:2308.06721},
+  year={2023}
+}
+@inproceedings{zhang2023adding,
+  title={Adding conditional control to text-to-image diffusion models},
+  author={Zhang, Lvmin and Rao, Anyi and Agrawala, Maneesh},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+  pages={3836--3847},
+  year={2023}
+}
+@inproceedings{radford2021learning,
+  title={Learning transferable visual models from natural language supervision},
+  author={Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+  booktitle={International conference on machine learning},
+  pages={8748--8763},
+  year={2021},
+  organization={PMLR}
+}
+@inproceedings{Heusel2017GANsTB,
+  title={GANs Trained by a Two Time-Scale Update Rule Converge to a Local Nash Equilibrium},
+  author={Martin Heusel and Hubert Ramsauer and Thomas Unterthiner and Bernhard Nessler and Sepp Hochreiter},
+  booktitle={Neural Information Processing Systems},
+  year={2017},
+   
+}
+@article{Zhang2023ShiftDDPMsEC,
+  title={ShiftDDPMs: Exploring Conditional Diffusion Models by Shifting Diffusion Trajectories},
+  author={Zijian Zhang and Zhou Zhao and Jun Yu and Qi Tian},
+  journal={ArXiv},
+  year={2023},
+  volume={abs/2302.02373},
+   
+}
+@article{Yang2022DiffusionMA,
+  title={Diffusion Models: A Comprehensive Survey of Methods and Applications},
+  author={Ling Yang and Zhilong Zhang and Shenda Hong and Runsheng Xu and Yue Zhao and Yingxia Shao and Wentao Zhang and Ming-Hsuan Yang and Bin Cui},
+  journal={ACM Computing Surveys},
+  year={2022},
+   
+}
+@article{Song2020DenoisingDI,
+  title={Denoising Diffusion Implicit Models},
+  author={Jiaming Song and Chenlin Meng and Stefano Ermon},
+  journal={ArXiv},
+  year={2020},
+  volume={abs/2010.02502},
+   
+}
+
+@inproceedings{Chao2022OnIT,
+  title={On Investigating the Conservative Property of Score-Based Generative Models},
+  author={Chen-Hao Chao and Wei-Fang Sun and Bo Wun Cheng and Chun-Yi Lee},
+  booktitle={International Conference on Machine Learning},
+  year={2022},
+   
+}
+
+@article{Zhao2023UniPCAU,
+  title={UniPC: A Unified Predictor-Corrector Framework for Fast Sampling of Diffusion Models},
+  author={Wenliang Zhao and Lujia Bai and Yongming Rao and Jie Zhou and Jiwen Lu},
+  journal={ArXiv},
+  year={2023},
+  volume={abs/2302.04867},
+  
+}
+@article{Dhariwal2021DiffusionMB,
+  title={Diffusion Models Beat GANs on Image Synthesis},
+  author={Prafulla Dhariwal and Alex Nichol},
+  journal={ArXiv},
+  year={2021},
+  volume={abs/2105.05233},
+   
+}
+@misc{betker2023improving,
+  title={Improving image generation with better captions},
+  author={Betker, James and Goh, Gabriel and Jing, Li and Brooks, Tim and Wang, Jianfeng and Li, Linjie and Ouyang, Long and Zhuang, Juntang and Lee, Joyce and Guo, Yufei and others},
+  year={2023},
+  publisher={OpenAI}
+}
+@article{SohlDickstein2015DeepUL,
+  title={Deep Unsupervised Learning using Nonequilibrium Thermodynamics},
+  author={Jascha Narain Sohl-Dickstein and Eric A. Weiss and Niru Maheswaranathan and Surya Ganguli},
+  journal={ArXiv},
+  year={2015},
+  volume={abs/1503.03585},
+   
+}
+@article{Lu2022DPMSolverFS,
+  title={DPM-Solver++: Fast Solver for Guided Sampling of Diffusion Probabilistic Models},
+  author={Cheng Lu and Yuhao Zhou and Fan Bao and Jianfei Chen and Chongxuan Li and Jun Zhu},
+  journal={ArXiv},
+  year={2022},
+  volume={abs/2211.01095},
+   
+}
+
+@inproceedings{Lai2022FPDiffusionIS,
+  title={FP-Diffusion: Improving Score-based Diffusion Models by Enforcing the Underlying Score Fokker-Planck Equation},
+  author={Chieh-Hsin Lai and Yuhta Takida and Naoki Murata and Toshimitsu Uesaka and Yuki Mitsufuji and Stefano Ermon},
+  booktitle={International Conference on Machine Learning},
+  year={2022},
+   
+}
+
+@article{FokkerDieME,
+  title={Die mittlere Energie rotierender elektrischer Dipole im Strahlungsfeld},
+  author={A. D. Fokker},
+  journal={Annalen der Physik},
+  volume={348},
+  pages={810-820},
+   
+}
+
+@misc{classifierfreepytorch,
+  author = {Coderpiaobozhe},
+  title = {Pytorch Implementation of Classifier-free Diffusion Guidance},
+  year = {2023},
+  journal={GitHub repository},
+  url = {https://github.com/coderpiaobozhe/classifier-free-diffusion-guidance-Pytorch}
+}
+
+@book{evans2022partial,
+  title={Partial differential equations},
+  author={Evans, Lawrence C},
+  volume={19},
+  year={2022},
+  publisher={American Mathematical Society}
+}
+
+@inproceedings{liu2015faceattributes,
+  title = {Deep Learning Face Attributes in the Wild},
+  author = {Liu, Ziwei and Luo, Ping and Wang, Xiaogang and Tang, Xiaoou},
+  booktitle = {Proceedings of International Conference on Computer Vision (ICCV)},
+  month = {December},
+  year = {2015} 
+}
+
+@article{liu2022flow,
+  title={Flow straight and fast: Learning to generate and transfer data with rectified flow},
+  author={Liu, Xingchao and Gong, Chengyue and Liu, Qiang},
+  journal={arXiv preprint arXiv:2209.03003},
+  year={2022}
+}
+@misc{flux2024,
+    author={Black Forest Labs},
+    title={FLUX},
+    year={2024},
+    howpublished={\url{https://github.com/black-forest-labs/flux}},
+}
+@inproceedings{esser2024scaling,
+  title={Scaling rectified flow transformers for high-resolution image synthesis},
+  author={Esser, Patrick and Kulal, Sumith and Blattmann, Andreas and Entezari, Rahim and M{\"u}ller, Jonas and Saini, Harry and Levi, Yam and Lorenz, Dominik and Sauer, Axel and Boesel, Frederic and others},
+  booktitle={Forty-first international conference on machine learning},
+  year={2024}
+}
+
+@inproceedings{zhang2018unreasonable,
+  title={The unreasonable effectiveness of deep features as a perceptual metric},
+  author={Zhang, Richard and Isola, Phillip and Efros, Alexei A and Shechtman, Eli and Wang, Oliver},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={586--595},
+  year={2018}
+}
+
+@INPROCEEDINGS{5206848,
+  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Kai Li and Li Fei-Fei},
+  booktitle={2009 IEEE Conference on Computer Vision and Pattern Recognition}, 
+  title={ImageNet: A large-scale hierarchical image database}, 
+  year={2009},
+  volume={},
+  number={},
+  pages={248-255},
+  keywords={Large-scale systems;Image databases;Explosions;Internet;Robustness;Information retrieval;Image retrieval;Multimedia databases;Ontologies;Spine},
+  doi={10.1109/CVPR.2009.5206848}}
+
+@misc{wan2025wanopenadvancedlargescale,
+      title={Wan: Open and Advanced Large-Scale Video Generative Models}, 
+      author={Team Wan and Ang Wang and Baole Ai and Bin Wen and Chaojie Mao and Chen-Wei Xie and Di Chen and Feiwu Yu and Haiming Zhao and Jianxiao Yang and Jianyuan Zeng and Jiayu Wang and Jingfeng Zhang and Jingren Zhou and Jinkai Wang and Jixuan Chen and Kai Zhu and Kang Zhao and Keyu Yan and Lianghua Huang and Mengyang Feng and Ningyi Zhang and Pandeng Li and Pingyu Wu and Ruihang Chu and Ruili Feng and Shiwei Zhang and Siyang Sun and Tao Fang and Tianxing Wang and Tianyi Gui and Tingyu Weng and Tong Shen and Wei Lin and Wei Wang and Wei Wang and Wenmeng Zhou and Wente Wang and Wenting Shen and Wenyuan Yu and Xianzhong Shi and Xiaoming Huang and Xin Xu and Yan Kou and Yangyu Lv and Yifei Li and Yijing Liu and Yiming Wang and Yingya Zhang and Yitong Huang and Yong Li and You Wu and Yu Liu and Yulin Pan and Yun Zheng and Yuntao Hong and Yupeng Shi and Yutong Feng and Zeyinzi Jiang and Zhen Han and Zhi-Fan Wu and Ziyu Liu},
+      year={2025},
+      eprint={2503.20314},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2503.20314}, 
+}
