--- a/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
+++ b/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
@@ -11,6 +11,7 @@
   author={Calvin Luo},
   journal={ArXiv},
   year={2022},
+  url={https://arxiv.org/abs/2208.11970}
 }
 
 @article{Ho2020DenoisingDP,
@@ -18,6 +19,7 @@
   author={Jonathan Ho and Ajay Jain and P. Abbeel},
   journal={ArXiv},
   year={2020},
+  url={https://arxiv.org/abs/2006.11239}
 }
 
 @article{Uhlenbeck1930OnTT,
@@ -25,6 +27,7 @@
   author={George E. Uhlenbeck and Leonard Salomon Ornstein},
   journal={Physical Review},
   year={1930},
+  url={https://doi.org/10.1103/PhysRev.36.823}
 }
 
 @article{Song2020ScoreBasedGM,
@@ -32,13 +35,15 @@
   author={Yang Song and Jascha Narain Sohl-Dickstein and Diederik P. Kingma and Abhishek Kumar and Stefano Ermon and Ben Poole},
   journal={ArXiv},
   year={2020},
+  url={https://arxiv.org/abs/2011.13456}
 }
 
 @article{song2019generative,
   title={Generative modeling by estimating gradients of the data distribution},
   author={Song, Yang and Ermon, Stefano},
   journal={Advances in Neural Information Processing Systems},
-  year={2019}
+  year={2019},
+  url={https://arxiv.org/abs/1907.05600}
 }
 
 @article{Anderson1982ReversetimeDE,
@@ -46,12 +51,14 @@
   author={Anderson, Brian D. O.},
   journal={Stochastic Processes and their Applications},
   year={1982},
+  url={https://doi.org/10.1016/0304-4149(82)90051-5}
 }
 
 @article{liu2022flow,
   title={Flow straight and fast: Learning to generate and transfer data with rectified flow},
   author={Liu, Xingchao and Gong, Chengyue and Liu, Qiang},
   journal={arXiv preprint arXiv:2209.03003},
-  year={2022}
+  year={2022},
+  url={https://arxiv.org/abs/2209.03003}
 }
 
