--- a/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
+++ b/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
@@ -62,3 +62,10 @@
   url={https://arxiv.org/abs/2209.03003}
 }
 
+@inproceedings{gao2025diffusion,
+title={Diffusion Models and Gaussian Flow Matching: Two Sides of the Same Coin},
+author={Ruiqi Gao and Emiel Hoogeboom and Jonathan Heek and Valentin De Bortoli and Kevin Patrick Murphy and Tim Salimans},
+booktitle={The Fourth Blogpost Track at ICLR 2025},
+year={2025},
+url={https://openreview.net/forum?id=C8Yyg9wy0s}
+}
