--- a/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
+++ b/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
@@ -69,3 +69,10 @@ booktitle={The Fourth Blogpost Track at ICLR 2025},
 year={2025},
 url={https://openreview.net/forum?id=C8Yyg9wy0s}
 }
+
+@misc{OrnsteinUhlenbeckWikipedia,
+  title={Ornstein--Uhlenbeck process},
+  author={{Wikipedia contributors}},
+  year={2024},
+  url={https://en.wikipedia.org/wiki/Ornstein%E2%80%93Uhlenbeck_process}
+}
