--- a/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
+++ b/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
@@ -72,7 +72,7 @@ url={https://openreview.net/forum?id=C8Yyg9wy0s}
 
 @misc{OrnsteinUhlenbeckWikipedia,
   title={Ornstein--Uhlenbeck process},
-  author={{Wikipedia contributors}},
+  author={Wikipedia contributors},
   year={2024},
   url={https://en.wikipedia.org/wiki/Ornstein%E2%80%93Uhlenbeck_process}
 }
