--- a/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
+++ b/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
@@ -62,6 +62,14 @@
   url={https://arxiv.org/abs/2209.03003}
 }
 
+@article{Karras2022Elucidating,
+  title={Elucidating the Design Space of Diffusion-Based Generative Models},
+  author={Karras, Tero and Aittala, Miika and Aila, Timo and Laine, Samuli},
+  journal={arXiv preprint arXiv:2206.00364},
+  year={2022},
+  url={https://arxiv.org/abs/2206.00364}
+}
+
 @inproceedings{gao2025diffusion,
 title={Diffusion Models and Gaussian Flow Matching: Two Sides of the Same Coin},
 author={Ruiqi Gao and Emiel Hoogeboom and Jonathan Heek and Valentin De Bortoli and Kevin Patrick Murphy and Tim Salimans},
