--- a/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
+++ b/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
@@ -84,3 +84,12 @@ url={https://openreview.net/forum?id=C8Yyg9wy0s}
   year={2024},
   url={https://en.wikipedia.org/wiki/Ornstein%E2%80%93Uhlenbeck_process}
 }
+
+@inproceedings{Lyu2009Interpretation,
+  title={Interpretation and generalization of score matching},
+  author={Lyu, Siwei},
+  booktitle={Proceedings of the 25th Conference on Uncertainty in Artificial Intelligence},
+  pages={359--366},
+  year={2009},
+  organization={AUAI Press}
+}
