add langevin citation

--- a/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
+++ b/assets/bibliography/2026-04-27-rethinking-diffusion-Langevin.bib
@@ -93,3 +93,12 @@ url={https://openreview.net/forum?id=C8Yyg9wy0s}
   year={2009},
   organization={AUAI Press}
 }
+
+@article{Langevin1908,
+  title={Sur la th{\'e}orie du mouvement brownien},
+  author={Langevin, Paul},
+  journal={Comptes Rendus de l'Acad{\'e}mie des Sciences},
+  volume={146},
+  pages={530--533},
+  year={1908}
+}
